objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>PO Oppty collegamenti</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Modifica Operatore</fullName>
        </values>
        <values>
            <fullName>Offerta accettata</fullName>
        </values>
        <values>
            <fullName>Offerta presentata</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Richiesta nuova proposta</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Costi_aggiuntivi_collegamento_coding__c</fullName>
        <label>Costi aggiuntivi collegamento coding</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_CanoneCollegamentoScontato__c</fullName>
        <formula>PO_Canone_collegamento__c - ((PO_Canone_collegamento__c  * PO_Sconto_canone_collegamento__c)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone collegamento scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CanoneManutenzioneCollegScontato__c</fullName>
        <formula>PO_Canone_manutenzione_collegamento__c - ((PO_Canone_manutenzione_collegamento__c * PO_Sconto_canone_manutenzione_collegam__c) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone manutenzione colleg. scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Backbone1__c</fullName>
        <label>Canone Backbone1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Backbone2__c</fullName>
        <label>Canone Backbone2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Drop1__c</fullName>
        <label>Canone Drop1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Drop2__c</fullName>
        <label>Canone Drop2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Scontato_Backbone1__c</fullName>
        <formula>PO_Canone_Backbone1__c - ((PO_Canone_Backbone1__c *  PO_Sconto_Canone_Backbone1__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone Backbone1 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Scontato_Backbone2__c</fullName>
        <formula>PO_Canone_Backbone2__c - ((PO_Canone_Backbone2__c * PO_Sconto_Canone_Backbone2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone Backbone2 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Scontato_Drop1__c</fullName>
        <formula>PO_Canone_Drop1__c - ((PO_Canone_Drop1__c *  PO_Sconto_Canone_Drop1__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone Drop1 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_Scontato_Drop2__c</fullName>
        <formula>PO_Canone_Drop2__c - ((PO_Canone_Drop2__c *  PO_Sconto_Canone_Drop2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone Drop2 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_1anno__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone annuo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_2anni__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone annuo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_3anni__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone annuo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_AltriAnni__c</fullName>
        <label>Canone annuo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_Collegamento1anno_Scont2__c</fullName>
        <formula>PO_Canone_annuo_1anno__c - ((PO_Canone_annuo_1anno__c * PO_ScontoCanone_annuo_Collegameno_1anno2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_Collegamento1anno_Sconta__c</fullName>
        <label>Canone annuo  Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_Collegamento2anno_Scont2__c</fullName>
        <formula>PO_Canone_annuo_2anni__c - ((PO_Canone_annuo_2anni__c * PO_ScontoCanone_annuo_Collegameno_2anno2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_Collegamento2anno_Sconta__c</fullName>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_Collegamento3anno_Scont2__c</fullName>
        <formula>PO_Canone_annuo_3anni__c - ((PO_Canone_annuo_3anni__c * PO_ScontoCanone_annuo_Collegameno_3anno2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_Collegamento3anno_Sconta__c</fullName>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_altri_anni_Scontato2__c</fullName>
        <formula>PO_Canone_annuo_AltriAnni__c - ((PO_Canone_annuo_AltriAnni__c * PO_ScontoCanone_annuo_altriAnni2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_annuo_altri_anni_Scontato__c</fullName>
        <label>Canone annuo Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_collegamento__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_collegamento_scontato__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone collegamento scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_manutenzione_colleg_scontato__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone manutenzione colleg. scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Canone_manutenzione_collegamento__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canone manutenzione collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Collegamento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collegamento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>PO Collegamento P2P, PO Collegamento Fiber Lease, PO Collegamento Fiber link, PO Collegamento IRU, PO Collegamento Misto Fiber Lease-Link per Fastweb</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Contratto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contratto</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_ContributoAttivazCollegamScontato__c</fullName>
        <formula>PO_Contributo_attivazione_collegamento__c - ((PO_Contributo_attivazione_collegamento__c  * PO_Sconto_contrib_attivaz_collegamento__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo attivaz. collegam. scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_ContributoDiAttivazione__c</fullName>
        <label>Contributo di Attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivaz_Scontato_Backbone1__c</fullName>
        <formula>PO_Contributo_Attivazione_Backbone1__c - (( PO_Contributo_Attivazione_Backbone1__c  * PO_Sconto_Contributi_Attivaz_Backbone1__c )/100)</formula>
        <label>Contributo Attivaz Backbone1 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivaz_Scontato_Backbone2__c</fullName>
        <formula>PO_Contributo_Attivazione_Backbone2__c - (( PO_Contributo_Attivazione_Backbone2__c * PO_Sconto_Contributi_Attivaz_Backbone2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo Attivaz Backbone2 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivaz_Scontato_Drop1__c</fullName>
        <formula>PO_Contributo_Attivazione_Drop1__c - (( PO_Contributo_Attivazione_Drop1__c *  PO_Sconto_Contributi_Attivaz_Drop1__c )/100)</formula>
        <label>Contributo Attivaz Drop1 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivaz_Scontato_Drop2__c</fullName>
        <formula>PO_Contributo_Attivazione_Drop2__c - (( PO_Contributo_Attivazione_Drop2__c * PO_Sconto_Contributi_Attivaz_Drop2__c )/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo Attivaz Drop2 scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivaz_altri_anni_Scont2__c</fullName>
        <formula>PO_Contributo_attivazione_altri_anni__c - (( PO_Contributo_attivazione_altri_anni__c * PO_Sconto_ContributoAttivaz_altriAnni2__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo Attivaz Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivaz_altri_anni_Scontat__c</fullName>
        <label>Contributo Attivaz Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivazione_Backbone1__c</fullName>
        <label>Contributo Attivazione Backbone1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivazione_Backbone2__c</fullName>
        <label>Contributo Attivazione Backbone2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivazione_Drop1__c</fullName>
        <label>Contributo Attivazione Drop1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_Attivazione_Drop2__c</fullName>
        <label>Contributo Attivazione Drop2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_annuo_Colleg1anno_Scontat2__c</fullName>
        <formula>PO_Contributo_attivazione_1anno__c - ((PO_Contributo_attivazione_1anno__c * PO_Sconto_ContributoAttivaz_Colleg1anno2__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_annuo_Colleg1anno_Scontato__c</fullName>
        <label>Contributo attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_annuo_Colleg2anni_Scontat2__c</fullName>
        <formula>PO_Contributo_attivazione_2anni__c - (( PO_Contributo_attivazione_2anni__c * PO_Sconto_ContributoAttivaz_Colleg2anno2__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_annuo_Colleg2anno_Scontato__c</fullName>
        <label>Contributo attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_annuo_Colleg3anni_Scontat2__c</fullName>
        <formula>PO_Contributo_attivazione_3anni__c - (( PO_Contributo_attivazione_3anni__c * PO_Sconto_ContributoAttivaz_Colleg3anno2__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_annuo_Colleg3anno_Scontato__c</fullName>
        <label>Contributo attivazione Scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_attivaz_collegam_scontato__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contributo attivaz. collegam. scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_attivazione_1anno__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contributo attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_attivazione_2anni__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contributo attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_attivazione_3anni__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contributo attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_attivazione_altri_anni__c</fullName>
        <label>Contributo attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_attivazione_collegamento__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contributo attivazione collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Contributo_di_Attivazione_FL__c</fullName>
        <formula>( PO_Valore_medio_annuo_totale__c   / 100) * 55</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributo di Attivazione FL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CorrispettivoIRUCollegamentoScontato__c</fullName>
        <formula>PO_Corrispettivo_IRU__c- ((PO_Corrispettivo_IRU__c * PO_Sconto_corrispettivo_IRU_collegamento__c) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corrispettivo IRU collegamento scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Corrispettivo_IRU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Corrispettivo IRU collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Corrispettivo_IRU_collegamento_scont__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Corrispettivo IRU collegamento scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CostiAggiuntiviCollegamento__c</fullName>
        <label>Costi aggiuntivi collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CostiCollegamento__c</fullName>
        <label>Costi Collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Altri_Anni_Scontati__c</fullName>
        <formula>PO_Costi_Aggiuntivi_Altri_Anni__c - ((PO_Costi_Aggiuntivi_Altri_Anni__c *  PO_Sconto_Costi_Aggiuntivi_Altri_Anni__c )/ 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi aggiuntivi altri anni scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Altri_Anni__c</fullName>
        <label>Costi Aggiuntivi Altri Anni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Anno1_Scontati__c</fullName>
        <formula>PO_Costi_Aggiuntivi_Anno1__c  - ((PO_Costi_Aggiuntivi_Anno1__c   *  PO_Sconto_Costi_Aggiuntivi_Anno1__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi aggiuntivi anno1 scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Anno1__c</fullName>
        <label>Costi Aggiuntivi Anno1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Anno2_Scontati__c</fullName>
        <formula>PO_Costi_Aggiuntivi_Anno2__c - ((PO_Costi_Aggiuntivi_Anno2__c * PO_Sconto_Costi_Aggiuntivi_Anno2__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi aggiuntivi anno2 scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Anno2__c</fullName>
        <label>Costi Aggiuntivi Anno2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Anno3_Scontati__c</fullName>
        <formula>PO_Costi_Aggiuntivi_Anno3__c - ((PO_Costi_Aggiuntivi_Anno3__c * PO_Sconto_Costi_Aggiuntivi_Anno3__c ) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi aggiuntivi anno3 scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_Aggiuntivi_Anno3__c</fullName>
        <label>Costi Aggiuntivi Anno3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_aggiuntivi_collegamento__c</fullName>
        <formula>PO_Collegamento__r.PO_Costi_aggiuntivi_collegamento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi aggiuntivi collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_aggiuntivi_collegamento_sconta2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costi aggiuntivi collegamento scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costi_aggiuntivi_collegamento_scontat__c</fullName>
        <formula>PO_CostiAggiuntiviCollegamento__c - ((PO_CostiAggiuntiviCollegamento__c * PO_Sconto_costi_aggiuntivi_collegamento__c) /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi aggiuntivi collegamento scontati</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CostoDiAttivazione__c</fullName>
        <label>Costo di attivazione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CostoStruttura__c</fullName>
        <label>Costo struttura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_Totale_Canoni_Scontato__c</fullName>
        <formula>(PO_Totale_canoni_scontato__c) - 

(((PO_Totale_canoni_scontato__c)/100)* PO_Sconto_Costo_Totale_Canoni__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo totale canoni scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_Totale_Canoni__c</fullName>
        <formula>PO_Totale_canoni__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo totale canoni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_Totale_Contributi__c</fullName>
        <formula>PO_Totale_contributi_attivazione__c +  PO_Totale_costi_aggiuntivi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo totale contributi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_Totale_collegamento_IRU__c</fullName>
        <formula>PO_Canone_manutenzione_collegamento__c +  PO_Corrispettivo_IRU__c + PO_Contributo_attivazione_collegamento__c +  PO_Costi_aggiuntivi_collegamento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo Totale collegamento IRU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_di_Attivazione_FL__c</fullName>
        <formula>(PO_Valore_medio_annuo_totale__c / 100) *8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo di Attivazione FL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_totale_collegamento_scontat_IRU__c</fullName>
        <formula>PO_Canone_manutenzione_colleg_scontato__c +   PO_Corrispettivo_IRU_collegamento_scont__c +  PO_Contributo_attivaz_collegam_scontato__c +  PO_Costi_aggiuntivi_collegamento_sconta2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo totale collegamento scontato IRU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Dettaglio_Costi_Aggiuntivi__c</fullName>
        <label>Dettaglio Costi Aggiuntivi</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Durata_affitto__c</fullName>
        <formula>PO_Richiesta_fattibilit__r.PO_Durata_affitto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Durata affitto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Durata_mesi__c</fullName>
        <formula>PO_Collegamento__r.PO_Durata_mesi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Durata (mesi)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Incluso_nell_offerta__c</fullName>
        <formula>PO_Collegamento__r.PO_Incluso_nell_offerta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incluso nell&apos;offerta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Numero_Anni__c</fullName>
        <label>Numero Anni</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Offerta_totale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offerta totale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_ParentCase__c</fullName>
        <formula>CASESAFEID(PO_Collegamento__r.ParentId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO_ParentCase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Prezzo_collegamento__c</fullName>
        <formula>(PO_Costi_aggiuntivi_collegamento__c +   PO_Canone_collegamento__c +  PO_Contributo_attivazione_collegamento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo Totale Collegamento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Prezzo_collegamento_scontato__c</fullName>
        <formula>PO_Canone_collegamento_scontato__c + PO_Costi_aggiuntivi_collegamento_sconta2__c + PO_Contributo_attivaz_collegam_scontato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo Totale collegamento scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Prezzo_totale_IRU__c</fullName>
        <formula>PO_Totale_corrispettivi_IRU__c + PO_Totale_costi_aggiuntivi__c + PO_Totale_contributi_attivazione__c + PO_Totale_canoni_manutenzione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo totale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Prezzo_totale__c</fullName>
        <formula>PO_Totale_canoni__c +  PO_Totale_contributi_attivazione__c +  PO_Totale_costi_aggiuntivi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo totale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Prezzo_totale_scontato_IRU__c</fullName>
        <formula>(PO_Totale_corrispettivi_IRU_scontati__c + PO_Totale_canoni_manutenzione_scontato__c + PO_Totale_contributi_attivazione_scontat__c + PO_Totale_costi_aggiuntivi_scontati__c) - 

(((PO_Totale_corrispettivi_IRU_scontati__c + PO_Totale_canoni_manutenzione_scontato__c + PO_Totale_contributi_attivazione_scontat__c + PO_Totale_costi_aggiuntivi_scontati__c)/100)* PO_Sconto_Prezzo_Totale_IRU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo totale scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Prezzo_totale_scontato__c</fullName>
        <formula>(PO_Totale_contributi_attivazione_scontat__c +  PO_Totale_costi_aggiuntivi_scontati__c) - 

((( PO_Totale_contributi_attivazione_scontat__c +  PO_Totale_costi_aggiuntivi_scontati__c)/100)* PO_Sconto_Costo_Totale_Contributi__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costo totale contributi scontato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Richiesta_fattibilit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Richiesta fattibilità</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>PO Richiesta a servizio a fattibilità</value>
            </filterItems>
            <filterItems>
                <field>$Source.PO_Collegamento__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities (Richiesta fattibilità)</relationshipLabel>
        <relationshipName>Offerta_richiesta_fattibilit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_SceltaAltriAnni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scelta altri anni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_SceltaAnno1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scelta 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_SceltaAnno2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scelta 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_SceltaAnno3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scelta 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_ScontoCanone_annuo_Collegameno_1anno2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_ScontoCanone_annuo_Collegameno_1anno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Canone annuo %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_ScontoCanone_annuo_Collegameno_1anno__c</fullName>
        <label>Sconto Canone annuo %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_ScontoCanone_annuo_Collegameno_2anno2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_ScontoCanone_annuo_Collegameno_2anno__c</formula>
        <label>Sconto Canone annuo %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_ScontoCanone_annuo_altriAnni2__c</fullName>
        <formula>PO_Offerta_totale__r.PO_Sconto_Canone_annuo_altriAnni__c</formula>
        <label>Sconto Canone annuo %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Canone_Backbone1__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_canone__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Canone Backbone1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Canone_Backbone2__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_canone__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Canone Backbone2 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Sconto_Canone_Drop1__c</fullName>
        <formula>IF(PO_Offerta_totale__c != null, PO_Offerta_totale__r.PO_Sconto_canone__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto Canone Drop1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>